# rust-zero-to-prod

./: .gitignore  Cargo.toml
.github/workflows/: general.yml
src/: main.rs
tests/: health_check.rs
